chore: release ci - introduce dependency on GitHub app

--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -1,5 +1,11 @@
 # name: "Tag and release terraform module"
 
+# # note:
+# #   for this workflow to work from a new repo in the organization the following must be done:
+# #     - allow the repo access to the organization secret ORG_TF_CICD_APP_PRIVATE_KEY here: https://github.com/organizations/dsb-norge/settings/secrets/actions
+# #     - allow the repo access to the organization variables ORG_TF_CICD_APP_ID and ORG_TF_CICD_APP_INSTALLATION_ID here: https://github.com/organizations/dsb-norge/settings/variables/actions
+# #     - allow the app 'dsb-norge-terraform-cicd-access' access to this repo by "configuring" the app from here: https://github.com/organizations/dsb-norge/settings/installations
+
 # on:
 #   push:
 #     branches:
@@ -9,6 +15,3 @@
 #   tag-and-release:
 #     uses: dsb-norge/github-actions-terraform/.github/workflows/terraform-module-release.yaml@v0
 #     secrets: inherit
-#     permissions:
-#       contents: write # required for checkout action.
-#       pull-requests: write # required for commenting on PR
